--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
       <div class="title">
         <h3>Rent the car</h3>
         <h1>Own the adventure</h1>
+        <div class="search">
+          <input type="text" name="user" placeholder="search">
+        </div>
       </div>
       </section>
+
     </header>
 
 
